@@ -145,7 +145,7 @@ type
     tsOpsiServiceCallStat,
     //tsTestCommand,
     tsStayWhileWindowOpen,
-    tsCondOpen, tsCondThen, tsCondElse, tsCondClose,
+    tsCondOpen, tsCondThen, tsCondElse, tsCondElseIf, tsCondClose,
     tsSwitch, tsSwitchCaseOpen, tsSwitchCaseClose,
     tsSwitchDefaultOpen, tsSwitchClose,
     tsLoopStringList, tsLoopForTo,
@@ -763,8 +763,8 @@ type
   TConditions = array [0..100] of boolean;
 
 var
-  Conditions: TConditions;
-  ThenBranch: TConditions;
+  Conditions: TConditions;   // used for if else endif
+  ThenBranch: TConditions;   // used for if else endif
 
 //const
 //zaehler  : Integer = 0;
@@ -21123,6 +21123,136 @@ begin
           end;
         end
 
+        {  HOW If / ELSE / ELSEIF / ENDIF PARSER WORKS:
+        At "IF" we increase the NestLevel (so we can have nested if / endif)
+        and that we evaluate the condition if NestLevel = ActLevel +1
+        and then we  increase the actlevel.
+        The result of the condition is stored in condition[Level]
+
+        Example  condition = true
+        ---------------- code:
+        if "true" = "true"
+            comment "then branch"
+        else
+            comment "else branch"
+        endif
+        -------------- log:
+          Prog: IF: Actlevel: 0 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        If
+          Prog: EvaluateBoolean: Parsing: "true" = "true"
+          "true" = "true"   <<< result true
+          Prog: IF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        Then
+          Prog: processline=true: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+          comment: then branch
+          Prog: ELSE: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True
+        Else
+          Prog: processline=false: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: False Conditions: False
+          Prog: ENDIF: Actlevel: 0 NestLevel: 0 sektion.NestingLevel: 0 ThenBranch: False  Conditions: True
+        EndIf
+        ==============
+
+        Example  condition = false
+        ---------------- code:
+        if "true" = "false"
+            comment "then branch"
+        else
+            comment "else branch"
+        endif
+        -------------- log:
+          Prog: IF: Actlevel: 0 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        If
+          Prog: EvaluateBoolean: Parsing: "true" = "false"
+          "true" = "false"   <<< result false
+          Prog: IF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        Then
+          Prog: processline=false: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+          Prog: ELSE: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        Else
+          Prog: processline=true: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: False Conditions: True
+          comment: else branch
+          Prog: ENDIF: Actlevel: 0 NestLevel: 0 sektion.NestingLevel: 0 ThenBranch: False Conditions: True
+        EndIf
+        ==============
+
+        Example  Nested if calls
+        The NestLevel become 2 in the nested call
+        ---------------- code:
+        if "true" = "true"
+            if "true" = "true"
+                comment "then then branch"
+            endif
+        else
+            comment "else branch"
+        endif
+        -------------- log:
+          Prog: IF: Actlevel: 0 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        If
+          Prog: EvaluateBoolean: Parsing: "true" = "true"
+          "true" = "true"   <<< result true
+          Prog: IF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        Then
+          Prog: IF: Actlevel: 1 NestLevel: 2 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+          If
+            Prog: EvaluateBoolean: Parsing: "true" = "true"
+            "true" = "true"   <<< result true
+            Prog: IF condition: Actlevel: 2 NestLevel: 2 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+          Then
+            Prog: processline=true: Actlevel: 2 NestLevel: 2 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+            comment: then then branch
+            Prog: ENDIF: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+          EndIf
+          Prog: ELSE: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        Else
+          Prog: processline=false: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: False Conditions: False
+          Prog: ENDIF: Actlevel: 0 NestLevel: 0 sektion.NestingLevel: 0 ThenBranch: False Conditions: True
+        EndIf
+        ==============
+
+        Example  Elseif
+        ---------------- code:
+        if "true" = "true"
+            comment "then branch"
+        elseif "true" = "true"
+            comment "elseif branch1"
+        elseif "false" = "true"
+            comment "elseif branch2"
+        else
+            comment "else branch"
+        endif
+        -------------- log:
+          Prog: IF: Actlevel: 0 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        If
+          Prog: EvaluateBoolean: Parsing: "true" = "true"
+          "true" = "true"   <<< result true
+          Prog: IF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        Then
+          Prog: processline=true: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+          comment: then branch
+          Prog: ElseIF: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        ElseIf
+          Prog: EvaluateBoolean: Parsing: "true" = "true"
+          "true" = "true"   <<< result true
+          Prog: ElseIF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        Then
+          Prog: processline=true: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+          comment: elseif branch1
+          Prog: ElseIF: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: True
+        ElseIf
+          Prog: EvaluateBoolean: Parsing: "false" = "true"
+          "false" = "true"   <<< result false
+          Prog: ElseIF condition: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        Then
+          Prog: processline=false: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+          Prog: ELSE: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: True Conditions: False
+        Else
+          Prog: processline=true: Actlevel: 1 NestLevel: 1 sektion.NestingLevel: 0 ThenBranch: False Conditions: True
+          Prog: EvaluateString: Parsing: "else branch"
+          comment: else branch
+          Prog: ENDIF: Actlevel: 0 NestLevel: 0 sektion.NestingLevel: 0 ThenBranch: False Conditions: True
+        EndIf
+        ============== do 09.02.2022}
+
         // treat statements for if-else first
 
         else if (StatKind = tsCondOpen) and (not (InSwitch) or ValidCase) then
@@ -21135,7 +21265,8 @@ begin
             logdatei.log_prog('IF: Actlevel: ' + IntToStr(Actlevel) +
               ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
               IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
-              BoolToStr(ThenBranch[NestLevel], True), LLDebug);
+              BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
             doLogEntries(PStatNames^ [tsCondOpen], LLinfo);
             if NestLevel > High(TConditions) then
             begin
@@ -21147,15 +21278,23 @@ begin
 
             if (NestLevel = ActLevel + 1) and Conditions[ActLevel] then
             begin
+              { a new active level is created if the if statement
+                is in a active Level AND inside of a positive branch.
+
               // eine neue aktive Ebene wird erzeugt, falls
               // die if-Anweisung auf einer aktiven Ebene UND im positiven Zweig steht
-
+              }
               Expressionstr := Remaining;
               if EvaluateBoolean(Expressionstr, Remaining, BooleanResult,
                 NestLevel, InfoSyntaxError) then
               begin
                 Inc(ActLevel);
                 Conditions[NestLevel] := BooleanResult;
+                logdatei.log_prog('IF condition: Actlevel: ' + IntToStr(Actlevel) +
+              ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
+              IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
+              BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
               end
               else
                 reportError(Sektion, linecounter, Expressionstr, InfoSyntaxError);
@@ -21178,7 +21317,8 @@ begin
             logdatei.log_prog('ELSE: Actlevel: ' + IntToStr(Actlevel) +
               ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
               IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
-              BoolToStr(ThenBranch[NestLevel], True), LLDebug);
+              BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
             if NestLevel <= Sektion.NestingLevel then
               reportError(Sektion, linecounter, '', PStatNames^
                 [tsCondElse] + '  without  ' + PStatNames^ [tsCondOpen])
@@ -21189,7 +21329,8 @@ begin
                 logdatei.log_prog('ELSE: Actlevel: ' + IntToStr(Actlevel) +
                   ' NestLevel: ' + IntToStr(NestLevel) +
                   ' sektion.NestingLevel: ' + IntToStr(sektion.NestingLevel) +
-                  ' ThenBranch: ' + BoolToStr(ThenBranch[NestLevel], True), LLWarning);
+                  ' ThenBranch: ' + BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLWarning);
                 reportError(Sektion, linecounter, '', 'double ' +
                   PStatNames^ [tsCondElse]);
               end
@@ -21209,6 +21350,79 @@ begin
           end;
         end
 
+         else if (StatKind = tsCondElseIf) and (not (InSwitch) or ValidCase) then
+        begin
+          { this is nearly the same then (if "tsCondOpen").
+          The difference is that we do not increase the NestLevel
+          and that we evaluate the condition if NestLevel = ActLevel
+          and we do not increase the actlevel.
+          From "Else" we took the "No elseif without if"}
+          begin
+            // elseif: we do not increase the nestinglevel
+            //Inc(NestLevel);
+            Ifelseendiflevel := Nestlevel;
+            ThenBranch[NestLevel] := True;
+            logdatei.log_prog('ElseIF: Actlevel: ' + IntToStr(Actlevel) +
+              ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
+              IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
+              BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
+
+            LogDatei.LogSIndentLevel := NestLevel - 1;
+            doLogEntries(PStatNames^ [tsCondElseIf], LLinfo);
+            LogDatei.LogSIndentLevel := NestLevel;
+
+            if NestLevel > High(TConditions) then
+            begin
+              reportError(Sektion, linecounter, '', 'Too many nested conditions');
+              exit;
+            end;
+             if NestLevel <= Sektion.NestingLevel then
+             begin
+              reportError(Sektion, linecounter, '', PStatNames^
+                [tsCondElseIf] + '  without  ' + PStatNames^ [tsCondOpen]);
+                exit;
+             end;
+
+            LogDatei.LogSIndentLevel := NestLevel;
+
+            // elseif: we evaluate the condition if NestLevel = ActLevel
+            if (NestLevel = ActLevel) and Conditions[ActLevel] then
+            begin
+              { a new active level is created if the if statement
+                is in a active Level AND inside of a positive branch.
+
+              // eine neue aktive Ebene wird erzeugt, falls
+              // die if-Anweisung auf einer aktiven Ebene UND im positiven Zweig steht
+              }
+              Expressionstr := Remaining;
+              if EvaluateBoolean(Expressionstr, Remaining, BooleanResult,
+                NestLevel, InfoSyntaxError) then
+              begin
+                // elseif: we do not increase the actlevel
+                //Inc(ActLevel);
+                Conditions[NestLevel] := BooleanResult;
+                logdatei.log_prog('ElseIF condition: Actlevel: ' + IntToStr(Actlevel) +
+              ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
+              IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
+              BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
+              end
+              else
+                reportError(Sektion, linecounter, Expressionstr, InfoSyntaxError);
+              if Remaining <> '' then
+                reportError(Sektion, linecounter, Remaining, 'erroneous characters ');
+            end;
+
+            LogDatei.LogSIndentLevel := NestLevel - 1;
+            doLogEntries(PStatNames^ [tsCondThen], LLInfo);
+            LogDatei.LogSIndentLevel := NestLevel;
+          end;
+          //ArbeitsSektion.NestingLevel:=Nestlevel;
+          //Sektion.NestingLevel:=Nestlevel;
+        end
+
+
         else if (StatKind = tsCondClose) and (not (InSwitch) or ValidCase) then
         begin
           // if FExtremeErrorLevel > levelfatal then
@@ -21224,7 +21438,8 @@ begin
               logdatei.log_prog('ENDIF: Actlevel: ' + IntToStr(Actlevel) +
                 ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
                 IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
-                BoolToStr(ThenBranch[NestLevel], True), LLDebug);
+                BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
             except
               logdatei.log_prog('ENDIF: Actlevel: ' + IntToStr(Actlevel) +
                 ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
@@ -21256,6 +21471,11 @@ begin
           // and line processing not stoped now
           and (ActionResult > 0) then
         begin
+          logdatei.log_prog('processline=true: Actlevel: ' + IntToStr(Actlevel) +
+                ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
+                IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
+                BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
           processline := True;
           case SectionSpecifier of
             tsecIncluded:
@@ -24928,7 +25148,14 @@ begin
           end;
         end
         else
+        begin
           processline := False;
+          logdatei.log_prog('processline=false: Actlevel: ' + IntToStr(Actlevel) +
+                ' NestLevel: ' + IntToStr(NestLevel) + ' sektion.NestingLevel: ' +
+                IntToStr(sektion.NestingLevel) + ' ThenBranch: ' +
+                BoolToStr(ThenBranch[NestLevel], True)+ ' Conditions: ' +
+              BoolToStr(Conditions[NestLevel], True), LLDebug);
+        end;
         ProcessMess;
       end;
 
@@ -26038,10 +26265,11 @@ begin
   PStatNames^ [tsStayWhileWindowOpen] := 'StayWhileWindowOpen';
   (* fuer Testzwecke, nicht dokumentiert *)
 
-  PStatNames^ [tsCondOpen] := 'If';
-  PStatNames^ [tsCondThen] := 'Then';
-  PStatNames^ [tsCondElse] := 'Else';
-  PStatNames^ [tsCondClose] := 'EndIf';
+  PStatNames^ [tsCondOpen]   := 'If';
+  PStatNames^ [tsCondThen]   := 'Then';
+  PStatNames^ [tsCondElse]   := 'Else';
+  PStatNames^ [tsCondElseIf] := 'ElseIf';
+  PStatNames^ [tsCondClose]  := 'EndIf';
 
   // switch
   PStatNames^ [tsSwitch] := 'Switch';
