@@ -16,6 +16,9 @@ opsi-script (4.12.4.37) stable; urgency=low
   * new function importCertToSystem(<filename>): noresult;  [WLM]
   * new function removeCertFromSystem(<label>): noresult;  [WLM]
   * new function listCertificatesFromSystem: stringlist;  [WLM]
+  * new command ELSEIF <condition>  [WLM]
+  * opsparser: implement elseif
+  * opsparser: A more detailed description how the If / ELSE / ELSEIF / ENDIF parser works
 
 -- d.oertel <d.oertel@uib.de> Tue, 01 Feb 2022 15:00
 
